--- a/Monitoring/Node-exporter/configuration.yml
+++ b/Monitoring/Node-exporter/configuration.yml
@@ -1,5 +1,5 @@
 basic_auth_users:
-  prometheus: $2y$10$2wYfojzjtMLXfScOt8FNEOtW/RiPfaHlHmoOh/OEIDP8j1.H7rr3S
+# prometheus: smthing_encoded
 
 tls_server_config:
   cert_file: /opt/node_exporter/cert.crt
